Added automatic redirect to HTTPS

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>What Day Is It?</title>
-<!-- 		<script type="text/javascript">
+		<script type="text/javascript">
 			var host = "simplemetar.tk";
 			if ((host == window.location.host) && (window.location.protocol != "https:"))
 			window.location.protocol = "https";
-		</script> -->
-		<!-- <link rel="canonical" href=" { { site.url } }{ { page.url } }" /> -->
+		</script>
+		<link rel="canonical" href=" { { site.url } }{ { page.url } }" />
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta name="description" content="See what day it is at Colonel By Secondary School.">
 		<link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
@@ -34,7 +34,7 @@
 			</div>
 		</div>
 		<div id="footer">
-			source on <a href="https://github.com/cheeseisdisgusting/simple-metar/">GitHub</a> <br>
+			<!-- source on <a href="https://github.com/cheeseisdisgusting/cb-days/">GitHub</a> <br> -->
 			by <a href="https://github.com/cheeseisdisgusting/">cheeseisdisgusting</a>
 		</div>
 	</body>
