Changed text size and favicons

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta name="description" content="See what day it is at Colonel By Secondary School.">
 		<link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
-		<link rel="apple-touch-icon" href="favicons/icon-180.png">
-		<link rel="apple-touch-icon-precomposed" href="favicons/icon-180.png">
+		<link rel="apple-touch-icon" href="favicons/icon-180-apple.png">
+		<link rel="apple-touch-icon-precomposed" href="favicons/icon-180-apple.png">
 		<link rel="icon" type="image/png" sizes="128x128"  href="favicons/icon-128.png">
 		<link rel="icon" type="image/png" sizes="64x64" href="/favicons/icon-64.png">
 		<meta name="msapplication-TileColor" content="#FFFFFF">
