Fixed up vertical height

--- a/index.html
+++ b/index.html
@@ -26,9 +26,7 @@
 	</head>
 	<body>
 		<div id="content">
-			<div id="sentence">
-				TODAY IS A
-			</div>
+			<div id="sentence">TODAY IS A</div>
 			<div id="day">
 				...
 			</div>
